update: margins broke somewhere nav bar overlapping. fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,9 +5,9 @@
 :root {
     --primary-font: "Poppins", sans-serif;
     --secondary-font: "Open Sans", sans-serif;
-    --primary-color: #96B7D4;
+    --primary-color: #96b7d4;
     --secondary-color: #ffeba1;
-    --tertiary-color: #2E5570; /* card subtitle color */
+    --tertiary-color: #2e5570; /* card subtitle color */
     --primary-color-highlight: #83c1ff;
     --secondary-color-highlight: #ffd166;
     --background-color: #faf9f7;
@@ -18,10 +18,11 @@
 
 /* -------------------- Base Styles -------------------- */
 html {
-    scroll-padding-top: 70px;
+   
     font-size: 18px;
     max-width: 100vw;
     overflow-x: hidden;
+    padding-top: 60px;
 }
 body {
     background-color: var(--background-color);
@@ -43,6 +44,16 @@ address {
     color: var(--text-color);
     font-weight: 400;
     line-height: 1.6;
+}
+
+h2,
+h3,
+section {
+    scroll-margin-top: 50px;
+}
+
+section {
+    padding-top: 30px;
 }
 
 /* -------------------- Navbar -------------------- */
@@ -112,7 +123,7 @@ body.night-mode .nightmode-icon {
     display: flex;
     align-items: flex-start;
     justify-content: center;
-    padding-top: 4rem;
+    padding-top: 70px;
 }
 body.night-mode .hero-section {
     background-image: url("../images/hero-night.webp");
@@ -201,8 +212,6 @@ body.night-mode .hero-section h1 {
     text-decoration: none;
 }
 
-
-
 /* -------------------- Resource Section -------------------- */
 #resources .btn {
     color: var(--tertiary-color);
@@ -251,7 +260,6 @@ footer .social-links i {
 footer .social-links i:hover {
     color: var(--secondary-color);
 }
-
 
 .footer-call {
     color: var(--text-color);
@@ -328,7 +336,6 @@ body.night-mode .footer-call:focus {
     transform: scale(1.08);
 }
 
-
 body.night-mode .section-blurb,
 body.night-mode h2 + p,
 body.night-mode h3 + p {
@@ -360,25 +367,25 @@ body.night-mode h3 + p {
 
     /* ------ resources section ------ */
     .helpline-btn::before {
-        content: attr(data-text); 
+        content: attr(data-text);
         font-weight: bold;
     }
 
     .helpline-btn i {
-        display: none; 
+        display: none;
     }
 
     .list-group-item {
-        flex-direction: column; 
+        flex-direction: column;
         text-align: center;
     }
 
     .list-group-item span {
-        display: none; 
+        display: none;
     }
 
     .list-group-item {
-        flex-direction: column; 
+        flex-direction: column;
         text-align: center;
     }
 }
@@ -400,5 +407,9 @@ body.night-mode h3 + p {
     #self-care .card {
         max-width: 100%;
         width: 100%;
+    }
+
+    .hero-section {
+        padding-top: 56px;
     }
 }
